fix[php]: alignment and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ h3 {
     width: 500px;
     background: #000;
     padding: 10px 0;
-    margin-top: 75px;
     text-align: center;
     border-radius: 5px;
 }
@@ -35,6 +34,8 @@ h3 {
 h4 {
     width: 500px;
     text-align: left;
+    font-size: 16px;
+    margin: 10px 0;
 }
 
 a,
@@ -52,7 +53,7 @@ a:focus {
 
 form {
     margin: 0;
-    width: 100%;
+    width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,7 +62,7 @@ form {
 }
 
 .content {
-    margin: 15px;
+    margin: 10px 0;
     width: 650px;
     background: #2d2f4b;
     display: flex;
@@ -73,8 +74,8 @@ form {
 
 #guide {
     background: #22243a;
-    margin: 15px 0;
-    width: 510px;
+    margin: 10px 0;
+    width: 500px;
     border: 1px solid #000;
     border-radius: 5px;
     padding: 10px 0;
@@ -83,6 +84,11 @@ form {
     align-items: center;
     align-content: center;
     justify-content: center;
+}
+
+#guide div {
+    width: 400px;
+    text-align: center;
 }
 
 .section {
@@ -112,7 +118,7 @@ form {
 }
 
 .row {
-    width: 510px;
+    width: 500px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -150,15 +156,19 @@ form {
 }
 
 .wide {
-    width: 500px;
+    width: 490px;
 }
 
 .med {
     width: 225px;
 }
 
+.file {
+    width: 450px;
+}
+
 .btn, .btn:active {
-    padding: 15px;
+    padding: 10px 0;
     width: 500px;
     font-size: 20px;
     font-family: monospace;
